--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2020 <strong>Grz</strong></small>
+        <small>&copy; 2020 <strong>GRZ</strong></small>
       </footer>
     </div>
 
