fixes user nil error

--- a/app/views/users/register.erb
+++ b/app/views/users/register.erb
@@ -1,11 +1,5 @@
 <!-- Register -->
-<!DOCTYPE html>
 
-<html>
-    <head>
-        <title>Register</title>
-    </head>
-   
 
     <h1>Register User</h1>
 
@@ -23,6 +17,6 @@
         <input type="password" name="password" id="password"/>
      </p>
      <input type="submit" value="Register"/>
-    </form>
 
-</html>
+     <h5>Already a user? <a href="/signin"> Sign In </a></h5>
+    </form>
