--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,9 +19,14 @@
     line-height: 18px;
   }
 
-  .warning {
+  .error {
     color: red;
   }
+
+  .success {
+    color: rgb(32, 212, 32);
+  }
+
 
   .wrapper {
     background: #fff;
