--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <title>Grz</title>
+    <title>GRZ</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <%= styled_flash %>
         <%= yield %>
 
       <footer class="branding">
