--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -9,6 +9,21 @@
       your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
     </div>
 
+    <div class="wrapper">
+
+    <nav>
+      <% if !signed_in? %>
+        <a href="/signin">Sign In</a>
+        <a href="/register">Register</a>
+        <% else %>
+         <form method="post" action="/signout" style="display: inline-block;">
+        <input type="hidden" name="_method" value="delete" />
+        <input type="submit" value="Sign Out"/>
+        </form>
+        <% end %>
+      </nav>
+      
+    </div>
     <div class="sidebar">
       <h3>Environment</h3>
       <ul>
@@ -16,6 +31,7 @@
         <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
         <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
         <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
+        <li><b>Logged In User's Id:</b> <%= session[:user_id] %></li>
       </ul>
     </div>
 
