--- a/app/views/reviews/main.erb
+++ b/app/views/reviews/main.erb
@@ -1,1 +1,4 @@
-<h1>This is the Model's index page.</h1>
+<h1>Reviews</h1>
+<% @reviews.each do |review| %>
+<p> <a href="/reviews/<%= review.id %>"><%= review.game_title %></a></p>
+<% end %>
