--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,7 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: #641E16;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -64,9 +64,9 @@
     overflow: hidden;
   }
 
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
+  .main-image {
+    display: block;
+    margin: 0 auto;
   }
 
   .sidebar {
