--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,12 +1,52 @@
-<div class="container">
-  <header><img src="images/grz-logo-full.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-   
+<div class="wrapper"> 
+
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="/reviews">Reviews</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#profile">Profile</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+      <div class="dropdown-menu" style="">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Separated link</a>
+      </div>
+    </li>
+  </ul>
+  <div id="myTabContent" class="tab-content">
+    <div class="tab-pane fade" id="home">
+    
+    </div>
+    <div class="tab-pane fade active show" id="profile">
+
+    <% if !signed_in?%>
+      <a href="/signin" class="btn btn-primary">Sign in</a>
+      <a href="/register" class="btn btn-primary">Register</a>
+    <% else %>
+      <form method="post" action="/signout">
+      <input type="hidden" name="_method" value="delete" />
+      <input type="submit" class="btn btn-outline-primary" value="Sign out">
+      </form>
+      <% end %>
+    </div>
+    <div class="tab-pane fade" id="dropdown1">
+      <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+    </div>
+    <div class="tab-pane fade" id="dropdown2">
+      <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+    </div>
+  </div>
+</div>
 
 
-    <div class="wrapper">
 
-    <nav>
+<!--
+   <nav>
       <% if !signed_in? %>
         <a href="/signin">Sign In</a>
         <a href="/register">Register</a>
@@ -17,20 +57,8 @@
         </form>
         <% end %>
       </nav>
-      
-    </div>
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-        <li><b>Logged In User's Id:</b> <%= session[:user_id] %></li>
-      </ul>
-    </div>
+      -->
 
-  </div>
-
-  
-</div>
+<!--
+       <header><img src="images/grz-logo-full.png" class="img-responsive main-image"></header>
+       -->
